check auth routes add link to the views and test todo route

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,2 +1,12 @@
-<h1>{{appTitle}} 🚀</h1>
-<p>Welcome Ironhacker!</p>
+<h1>POST IT</h1>
+<p>Post it right here right now_</p>
+
+<p>Press enter</p>
+
+<a href="/auth/signup">Link signup</a>
+<br />
+<a href="/auth/login">Link login</a>
+<br />
+<a href="/auth/logout">Link logout</a>
+<br />
+<a href="/todo">todo</a>
