tests to see if style linked

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,12 +1,13 @@
-<h1>POST IT</h1>
-<p>Post it right here right now_</p>
+<section class="old-paper">
+  <div class="intro-post-it-now">
+    <p class="line-1 anim-typewriter">POST IT RIGHT HERE RIGHT NOW</p>
+  </div>
+  <div class="press-enter">
+    <p>PRESS ENTER</p>
+  </div>
 
-<p>Press enter</p>
-
-<a href="/auth/signup">Link signup</a>
-<br />
-<a href="/auth/login">Link login</a>
-<br />
-<a href="/auth/logout">Link logout</a>
-<br />
-<a href="/todo">todo</a>
+  <a href="/auth/signup">( Link signup</a>
+  <a href="/auth/login">Link login</a>
+  <a href="/auth/logout">Link logout</a>
+  <a href="/todo">Link todo )</a>
+</section>
