--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>POST-IT</title>
-    <link rel="stylesheet" href="/stylesheets/style.css" />
+    {{#each style}}
+      <link rel="stylesheet" href="stylesheets/{{this}}" />
+    {{/each}}
   </head>
 
   <body>
