create todo but not with partials

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -8,6 +8,7 @@
     {{#each style}}
       <link rel="stylesheet" href="stylesheets/{{this}}" />
     {{/each}}
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   </head>
 
   <body>
@@ -15,6 +16,8 @@
     {{{body}}}
 
     <script src="/js/script.js"></script>
+    <script src="/js/todo.js"></script>
+
   </body>
 
 </html>
