reorganised routes and insert partials

--- a/public/stylesheets/todostyle.css
+++ b/public/stylesheets/todostyle.css
@@ -1,11 +1,5 @@
 body {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-}
-
-form {
+  background-color: red;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
 }
