--- a/views/index.hbs
+++ b/views/index.hbs
@@ -9,5 +9,5 @@
   <a href="/auth/signup">( Link signup</a>
   <a href="/auth/login">Link login</a>
   <a href="/auth/logout">Link logout</a>
-  <a href="/todo">Link todo )</a>
+  <a href="/filecreation">Link file creation )</a>
 </section>
