--- a/views/partials/selectionpartial.hbs
+++ b/views/partials/selectionpartial.hbs
@@ -9,6 +9,7 @@
     <h4>Note title 2</h4>
   </div>
   <div class="todo">
+    <a href="/todos"> All to do</a>
     <h2>Create a to do</h2>
       <input type="button" id="add-todo" value="+"></input>
   <input type="text" id="new-todo-input" placeholder="To do title">
