--- a/views/partials/selectionpartial.hbs
+++ b/views/partials/selectionpartial.hbs
@@ -2,7 +2,9 @@
 
   <h1>All files header partial</h1>
   <div class="notes">
+    <a href="/notes"> All notes</a>
     <h2>Create a note</h2>
+    <a href="/notes/create">Add a note</a>
     
     <h3>Your notes</h3>
     <h4>Note title 1</h4>
@@ -11,6 +13,7 @@
   <div class="todo">
     <a href="/todos"> All to do</a>
     <h2>Create a to do</h2>
+    <a href="/todos/create">Add a todo</a>
       <input type="button" id="add-todo" value="+"></input>
   <input type="text" id="new-todo-input" placeholder="To do title">
     <h3>Your to do</h3>
