--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -17,6 +17,7 @@
 
     <script src="/js/script.js"></script>
     <script src="/js/todo.js"></script>
+    <script src="/js/note.js"></script>
 
   </body>
 
