--- a/views/notes/allnotesview.hbs
+++ b/views/notes/allnotesview.hbs
@@ -1,9 +1,13 @@
-<section>
-{{> userheaderpartial}}
+<section id=“all-page”>
+    <section id=“header-partial”>
+    {{> userheaderpartial}}
+    </section>
+    <section id=“menu-partial-functionalities”>
+    <div>
+    {{> selectionpartial}}
+    </div>
+    <div>
+    <h1>List of notes</h1>
+    </div>
+    </section>
 </section>
-
-<section>
-{{> selectionpartial}}
-</section>
-
-<h1>List of notes</h1>
