partials flex ok

--- a/public/stylesheets/todostyle.css
+++ b/public/stylesheets/todostyle.css
@@ -1,4 +1,9 @@
-body {
+/* .all-partials {
+  display: flex;
+  flex-direction: column;
+}
+
+.menu-functionalities {
   display: flex;
   flex-direction: row;
-}
+} */
