--- a/views/partials/userheaderpartial.hbs
+++ b/views/partials/userheaderpartial.hbs
@@ -1,3 +1,4 @@
 <header>
-  <h2>User Name header Partial</h2>
+  <h4>User Name header Partial</h4>
+  <a href="/auth/logout">Link logout</a>
 </header>
