--- a/views/todo/alltodoview.hbs
+++ b/views/todo/alltodoview.hbs
@@ -1,20 +1,26 @@
+<section class="all-partials">
 
-<section>
-{{> userheaderpartial}}
+  <header class="header">
+  {{> userheaderpartial}}
+  </header>
+
+
+  <section class="menu-functionalities">
+    <section>
+    {{> selectionpartial}}
+    </section>
+
+    <section class="files-container">
+      <h1>All Todos</h1>
+    {{#each allTodos}}
+
+      <input type="text" name="title" placeholder="title: " value="{{this.title}}" />
+      <input type="text" name="task" placeholder="genre: " value="{{this.title}}" />
+          <input type="text"></input>
+    {{/each}}
+    </section>
+
+    <section></section>
+  </section>
+
 </section>
-
-<section>
-{{> selectionpartial}}
-</section>
-
-<section class="files-container">
-  <h1>All Todos</h1>
-{{#each allTodos}}
-
-  <input type="text" name="title" placeholder="title: " value="{{this.title}}" />
-  <input type="text" name="task" placeholder="genre: " value="{{this.title}}" />
-      <input type="text"></input>
-{{/each}}
-</section>
-
-<section></section>
