--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,21 +1,22 @@
-body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-}
-
-a {
-  color: #00b7ff;
-}
-
-h1 {
-  color: 15px;
-}
-
-#all-page {
+.all-partials {
+  width: 100vw;
+  height: 100vh;
   display: flex;
   flex-direction: column;
 }
-#menu-partial-functionalities {
+
+.menu-functionalities {
   display: flex;
   flex-direction: row;
+  justify-content: space-between;
+  margin: 2rem;
+}
+
+header {
+  width: 100vw;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-content: space-between;
+  margin: 1rem;
 }
