--- a/views/notes/allnotesview.hbs
+++ b/views/notes/allnotesview.hbs
@@ -1,13 +1,20 @@
-<section id=“all-page”>
-    <section id=“header-partial”>
-    {{> userheaderpartial}}
-    </section>
-    <section id=“menu-partial-functionalities”>
-    <div>
-    {{> selectionpartial}}
-    </div>
-    <div>
-    <h1>List of notes</h1>
-    </div>
-    </section>
+<section class="all-partials">
+
+  <section class="header">
+  {{> userheaderpartial}}
+  </section>
+
+
+    <section class="menu-functionalities">
+        <section>
+        {{> selectionpartial}}
+        </section>
+
+
+        <h1>All Notes</h1>
+
+
+        <section>Outils</section>
+  </section>
+
 </section>
