to do try and display styles ok

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>POST-IT</title>
     {{#each style}}
-      <link rel="stylesheet" href="stylesheets/{{this}}" />
+      <link rel="stylesheet" href="/stylesheets/{{this}}" />
     {{/each}}
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   </head>
