--- a/views/partials/selectionpartial.hbs
+++ b/views/partials/selectionpartial.hbs
@@ -2,24 +2,21 @@
 
   <h1>All files header partial</h1>
   <div class="notes">
-    <a href="/notes"> All notes</a>
+    <a href="/notes"> Notes</a>
     <h2>Create a note</h2>
     <a href="/notes/create">Add a note</a>
-    
+
     <h3>Your notes</h3>
     <h4>Note title 1</h4>
     <h4>Note title 2</h4>
   </div>
   <div class="todo">
-    <a href="/todos"> All to do</a>
-    <h2>Create a to do</h2>
-    <a href="/todos/create">Add a todo</a>
-      <input type="button" id="add-todo" value="+"></input>
-  <input type="text" id="new-todo-input" placeholder="To do title">
+    <a href="/todos"> To do</a>
+    <a href="/todos/create">+</a>
+
     <h3>Your to do</h3>
     <h4>To do title 1</h4>
     <h4>To do title 2</h4>
   </div>
-
 
 </section>
