--- a/views/todo/alltodoview.hbs
+++ b/views/todo/alltodoview.hbs
@@ -13,10 +13,8 @@
     <section class="files-container">
       <h1>All Todos</h1>
     {{#each allTodos}}
-
       <input type="text" name="title" placeholder="title: " value="{{this.title}}" />
-      <input type="text" name="task" placeholder="genre: " value="{{this.title}}" />
-          <input type="text"></input>
+      <input type="text" name="task" placeholder="genre: " value="{{this.content}}" />
     {{/each}}
     </section>
 
