--- a/views/todo/onetodoview.hbs
+++ b/views/todo/onetodoview.hbs
@@ -10,13 +10,14 @@
 </section>
 
 <section class="files-container">
-  <h1>test</h1>
-{{#each myToDo}}
-
-  <input type="text" name="title" placeholder="title: " value="{{this.title}}" />
-  <input type="text" name="task" placeholder="genre: " value="{{this.title}}" />
-      <input type="text"></input>
+  
+{{#each oneToDo}}
+  <h1>{{this.title}}</h1>
 {{/each}}
+
+  <input type="text" id="new-task-input" placeholder="Your task">
+  <input type="button" id="add-task" value="Save Task"></input>
+  
 </section>
 
 <section></section>
