create a note and redirect to a list of notes

--- a/views/notes/allnotesview.hbs
+++ b/views/notes/allnotesview.hbs
@@ -11,10 +11,17 @@
         </section>
 
 
-        <h1>All Notes</h1>
-
-
         <section>Outils</section>
   </section>
+
+  <ul>
+  {{#each allNotes}}
+    <li>
+    {{this.title}}
+    </li>
+    <br />
+
+  {{/each}}
+</ul>
 
 </section>
