--- a/views/notes/createnoteview.hbs
+++ b/views/notes/createnoteview.hbs
@@ -6,4 +6,7 @@
 {{> selectionpartial}}
 </section>
 
-<h1>Title Create Note</h1>
+<h1>New note</h1>
+<input type="text" id="note-title" placeholder="Title: " />
+<input type="text" id="note-content" placeholder="Content: " />
+<input type="button" id="save-button" value="Save"/>
