--- a/public/stylesheets/introstyle.css
+++ b/public/stylesheets/introstyle.css
@@ -2,6 +2,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap");
 
 body {
+  background: url(/images/fond-papier.jpg);
   font-family: "Roboto Mono", monospace;
   height: 100vh;
   width: 100vw;
@@ -13,7 +14,6 @@ body {
 }
 
 .old-paper {
-  background: url(/images/intro-old-paper.jpeg);
   width: 453px;
   height: 654px;
   left: 489px;
