--- a/views/notes/allnotesview.hbs
+++ b/views/notes/allnotesview.hbs
@@ -11,11 +11,15 @@
         </section>
 <section class="note-list-section">
   {{#each allNotes}}
-  <div class="each-note"><div class="note-title">{{this.title}}</div></div>
+  <div class="each-note">
+    <div class="note-title">{{this.title}}</div>
+    <section data-id="{{this.id}}" id="section-buttons">
+      <a href="/notes/{{this.id}}"><img id="edit-image" src="/images/edit.png", alt="Edit"/></a>
+      <a href="/notes" id="trashbin-button"><img id="trashbin-image" src="/images/trash-bin.png", alt="Trash bin"/></a>
+      </section>
+    </div>
   {{/each}}
 </section>
-
-        <section>Outils</section>
   </section>
 
 
