--- a/views/todo/createtodoview.hbs
+++ b/views/todo/createtodoview.hbs
@@ -10,10 +10,10 @@
             {{> selectionpartial}}
         </section>
 
-        <section><h2 class="transformation-line">Create To Do</h2>
+        <section><h2 class="transformation-line">Create a to do</h2>
         <ul id="tasks"></ul>
-            <input type="text" data-todo-id="" name="title" id="new-todo-input" placeholder="To do title">
-            <input type="button" id="add-title" value="Save Title"></input>
+            <input type="text" data-todo-id="" name="title" id="new-todo-input" placeholder="Title of your to do">
+            <input type="button" id="add-title" value="+"></input>
         </section>
         <section>
             Outils
