--- a/views/todo/onetodoview.hbs
+++ b/views/todo/onetodoview.hbs
@@ -1,20 +1,34 @@
-{{! partial header  }}
-{{! partial left section  }}
 
-<section>
-{{> userheaderpartial}}
-</section>
+<header class="header">
+  {{> userheaderpartial}}
+  </header>
 
-<section>
-{{> selectionpartial}}
-</section>
+  <section class="menu-functionalities">
+    <section>
+    {{> selectionpartial}}
+    </section>
 
-<section class="files-container">
-  
-{{#each oneToDo}}
-  <h1>{{this.title}}</h1>
+<section data-id="{{oneTodo.id}}" id="section-one-todo">
+
+
+  <h2 class="one-title">{{oneTodo.title}}</h2>
+
+{{#each oneTodo.content}}
+
+<li class="one-task-edit-page">{{this.task}}</li>
+
 {{/each}}
 
+<ul id="tasks-edit-page"></ul>
+<input type="text" data-todo-id="" name="task-edit-page" id="new-task-input-edit-page" placeholder="Add a task">
+<input type="button" id="add-task-edit-page" value="+"></input>
+
+<a href="/todos/{{this.id}}">edit</a>
+<a href="/todos" id="delete-one-todo">delete</a>
+
+</section>
+
+        <section>Outils</section>
 
 </section>
 
