some styles + repair the delete problem

--- a/views/notes/allnotesview.hbs
+++ b/views/notes/allnotesview.hbs
@@ -15,7 +15,7 @@
     <div class="note-title">{{this.title}}</div>
     <section data-id="{{this.id}}" id="section-buttons">
       <a href="/notes/{{this.id}}"><img id="edit-image" src="/images/edit.png", alt="Edit"/></a>
-      <a href="/notes" id="trashbin-button"><img id="trashbin-image" src="/images/trash-bin.png", alt="Trash bin"/></a>
+      <!--<a href="/notes" id="trashbin-button"><img id="trashbin-image" src="/images/trash-bin.png", alt="Trash bin"/></a>-->
       </section>
     </div>
   {{/each}}
