--- a/public/stylesheets/onenote.css
+++ b/public/stylesheets/onenote.css
@@ -2,3 +2,31 @@
   width: 1.5rem;
   height: 1.5rem;
 }
+
+.text-section {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  align-items: flex-start;
+  align-content: flex-start;
+  width: 619px;
+  height: 646px;
+  left: -51px;
+  top: -13px;
+  background: rgba(237, 237, 233, 0.3);
+  box-shadow: 0px 0.1px 10px rgba(0, 0, 0, 0.15);
+}
+
+#edit-note-title,
+#edit-note-content {
+  border: none;
+  background: transparent;
+  width: 619px;
+  height: 100px;
+}
+#edit-note-content {
+  width: 619px;
+  height: 400px;
+  justify-content: flex-start;
+}
