--- a/views/todo/onetodoview.hbs
+++ b/views/todo/onetodoview.hbs
@@ -9,22 +9,27 @@
     </section>
 
 <section data-id="{{oneTodo.id}}" id="section-one-todo">
-
-
   <h2 class="one-title">{{oneTodo.title}}</h2>
+<p><input type="text" id="edit-todo-title" value="{{oneTodo.title}}" /></p>
+<a id="edit-button-todo-title" href="/todos/{{oneTodo.id}}">edit</a>
+
 
 {{#each oneTodo.content}}
-
+<article>
 <li class="one-task-edit-page">{{this.task}}</li>
+<p><input type="text" value="{{this.task}}" /></p>
+<a class="edit-button" href="/todos/{{../oneTodo.id}}/{{this.id}}">edit</a>
 
+</article>
 {{/each}}
 
-<ul id="tasks-edit-page"></ul>
-<input type="text" data-todo-id="" name="task-edit-page" id="new-task-input-edit-page" placeholder="Add a task">
-<input type="button" id="add-task-edit-page" value="+"></input>
 
-<a href="/todos/{{this.id}}">edit</a>
-<a href="/todos" id="delete-one-todo">delete</a>
+{{!-- <ul id="tasks-edit-page"></ul>
+<input type="text" data-todo-id="" name="task-edit-page" id="new-task-input-edit-page" placeholder="Add a task">
+<input type="button" id="add-task-edit-page" value="+"></input> --}}
+
+
+<a href="/todos" id="delete-one-todo"><img id="trashbin-image-todos" src="/images/trash-bin.png", alt="Trash bin"/></a>
 
 </section>
 
