--- a/views/todo/alltodoview.hbs
+++ b/views/todo/alltodoview.hbs
@@ -13,9 +13,13 @@
     <section class="todo-list-section">
 
     {{#each allTodos}}
-      <div class="each-todo"><div class="todo-title">{{this.title}}</div></div>
-      <a href="/todos/{{this.id}}">edit</a>
-      <a href="/todos/" id="delete-one-todo">delete</a>
+      <div class="each-todo">
+        <div class="todo-title">{{this.title}}</div>
+          <section data-id="{{this.id}}" id="section-buttons">
+            <a href="/todos/{{this.id}}"><img id="edit-image-todos" src="/images/edit.png", alt="Edit-todo"/></a>
+            {{!-- <a href="/todos" id="delete-one-todo"><img id="trashbin-image-todos" src="/images/trash-bin.png", alt="Trash bin"/></a> --}}
+          </section>
+        </div>
     {{/each}}
     </section>
 
