--- a/views/notes/onenoteview.hbs
+++ b/views/notes/onenoteview.hbs
@@ -12,7 +12,7 @@
 
         <section class="text-section">
 <p><input type="text" id="edit-note-title" value="{{oneNote.title}}" /></p>
-<p><input type="text" id="edit-note-content" value="{{oneNote.content}}" /></p>
+<p><textarea id="edit-note-content">{{oneNote.content}}</textarea></p>
         </section>
         <section data-id="{{oneNote.id}}">
             Outils
