--- a/views/partials/selectionpartial.hbs
+++ b/views/partials/selectionpartial.hbs
@@ -1,22 +1,19 @@
-<section>
-
-  <h1>All files header partial</h1>
+<section class="menu-section">
   <div class="notes">
-    <a href="/notes"> Notes</a>
-    <h2>Create a note</h2>
-    <a href="/notes/create">Add a note</a>
-
-    <h3>Your notes</h3>
-    <h4>Note title 1</h4>
-    <h4>Note title 2</h4>
+    <a id="notes-link" href="/notes"> Notes</a>
+    <a href="/notes/create"><img
+        id="add-button"
+        src="/images/add-button.png"
+        alt="plus"
+      /></a>
   </div>
-  <div class="todo">
-    <a href="/todos"> To do</a>
-    <a href="/todos/create">+</a>
-
-    <h3>Your to do</h3>
-    <h4>To do title 1</h4>
-    <h4>To do title 2</h4>
+  <div class="todos">
+    <a id="todos-link" href="/todos"> To do</a>
+    <a href="/todos/create"><img
+        id="add-button"
+        src="/images/add-button.png"
+        alt="plus"
+      /></a>
   </div>
 
 </section>
