--- a/views/partials/userheaderpartial.hbs
+++ b/views/partials/userheaderpartial.hbs
@@ -1,4 +1,16 @@
 <header>
-  <h4>User Name header Partial</h4>
-  <a href="/auth/logout">Link logout</a>
+  <div class="username-section">
+    <img id="user-image" src="/images/user.png" alt="User image" />
+    <h4>{{currentUser.username}}</h4>
+  </div>
+  <img
+    id="header-post-it-logo"
+    src="/images/postIT-logo.png"
+    alt="postIT logo"
+  />
+  <a href="/auth/logout"><img
+      id="logout-image"
+      src="/images/log-out.png"
+      alt="log out"
+    /></a>
 </header>
