--- a/views/todo/alltodoview.hbs
+++ b/views/todo/alltodoview.hbs
@@ -1,8 +1,8 @@
 <section class="all-partials">
 
-  <header class="header">
+  <section class="header">
   {{> userheaderpartial}}
-  </header>
+  </section>
 
 
   <section class="menu-functionalities">
