--- a/views/loginregisterview.hbs
+++ b/views/loginregisterview.hbs
@@ -1,7 +1,7 @@
 <section class="all-page-log-or-register">
   <header class="postitlogo">
     <div></div>
-    <img id="post-it" src="/images/postIT-logo.png" alt="" />
+    <img id="post-it" src="/images/postIT-logo.png" alt="postitlogo" />
   </header>
 
   <section class="login-or-register">
