--- a/views/index.hbs
+++ b/views/index.hbs
@@ -3,11 +3,15 @@
     <p class="line-1 anim-typewriter">POST IT RIGHT HERE RIGHT NOW</p>
   </div>
   <div class="press-enter">
-    <a href="/loginorregister">PRESS ENTER</a>
+    <a href="/loginorregister"><img
+        id="press-enter-image"
+        src="/images/pressenter.png"
+        alt="press-enter"
+      /></a>
   </div>
 
-  <a href="/auth/signup">Link signup</a>
+  {{! <a href="/auth/signup">Link signup</a>
   <a href="/auth/login">Link login</a>
   <a href="/auth/logout">Link logout</a>
-  <a href="/filecreation">Link file creation</a>
+  <a href="/filecreation">Link file creation</a> }}
 </section>
