--- a/views/index.hbs
+++ b/views/index.hbs
@@ -3,11 +3,13 @@
     <p class="line-1 anim-typewriter">POST IT RIGHT HERE RIGHT NOW</p>
   </div>
   <div class="press-enter">
-    <a href="/loginorregister"><img
+    <a href="/loginorregister" id="press-enter-id">
+      <img
         id="press-enter-image"
         src="/images/pressenter.png"
         alt="press-enter"
-      /></a>
+      />
+    </a>
   </div>
 
   {{! <a href="/auth/signup">Link signup</a>
