some front and add task to to do

--- a/views/notes/onenoteview.hbs
+++ b/views/notes/onenoteview.hbs
@@ -18,6 +18,8 @@
             Outils
             <a href="/notes" id="trashbin-button"><img id="trashbin-image" src="/images/trash-bin.png", alt="Trash bin"/></a>
             <input type="button" id="edit-button" value="Edit"/>
+                        <a href="/notes" id="button-all-notes">ALL TO NOTES</a>
+
         </section>
   </section>
 
