--- a/views/todo/createtodoview.hbs
+++ b/views/todo/createtodoview.hbs
@@ -17,6 +17,7 @@
         </section>
         <section>
             Outils
+            <a href="/todos" id="button-all-todo">ALL TO DOs</a>
         </section>
   </section>
 
