--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -18,13 +18,12 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  margin: 2rem;
 }
 
 /*Header partial*/
 
 header {
-  width: 100%;
+  height: 5rem;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
@@ -69,7 +68,7 @@ header {
 
 .menu-section {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-  height: 100%;
+  height: 33rem;
   width: 18.625rem;
   border-radius: 0px;
   padding: 2rem;
