--- a/views/todo/onetodoview.hbs
+++ b/views/todo/onetodoview.hbs
@@ -9,6 +9,7 @@
     </section>
 
 <section data-id="{{oneTodo.id}}" id="section-one-todo">
+
   {{!-- <h2 class="one-title">{{oneTodo.title}}</h2> --}}
 <p><input type="text" id="edit-todo-title" value="{{oneTodo.title}}" /></p>
 <a id="edit-button-todo-title" href="/todos/{{oneTodo.id}}">edit</a>
@@ -19,6 +20,7 @@
 {{!-- <li class="one-task-edit-page">{{this.task}}</li> --}}
 <p><input type="text" value="{{this.task}}" /></p>
 <a class="edit-button" href="/todos/{{../oneTodo.id}}/{{this.id}}">edit</a>
+<a class="delete-button-task" href="/todos/{{../oneTodo.id}}/{{this.id}}">delete</a>
 
 </article>
 
@@ -31,12 +33,13 @@
 <input type="button" id="add-task-edit-page" value="+"></input>
 
 
+<a href="/todos" id="delete-one-todo"><img id="trashbin-image-todos" src="/images/trash-bin.png", alt="Trash bin"/></a>
 
 </section>
 
         <section id="outils-one-todo">Outils
-<a href="/todos" id="delete-one-todo"><img id="trashbin-image-todos" src="/images/trash-bin.png", alt="Trash bin"/></a>
 <a href="/todos" id="button-all-todo">ALL TO DOs</a>
+
         </section>
 
 </section>
