--- a/public/stylesheets/listnotestyle.css
+++ b/public/stylesheets/listnotestyle.css
@@ -7,6 +7,9 @@
   justify-content: space-evenly;
   align-items: center;
   align-content: space-around;
+  overflow-y: scroll;
+  width: 850px;
+  height: 600px;
 }
 
 .each-note {
