--- a/views/todo/createtodoview.hbs
+++ b/views/todo/createtodoview.hbs
@@ -10,7 +10,7 @@
             {{> selectionpartial}}
         </section>
 
-        <section><h2 class="transformation-line">Create a to do</h2>
+        <section><h2 class="transformation-line"></h2>
         <ul id="tasks"></ul>
             <input type="text" data-todo-id="" name="title" id="new-todo-input" placeholder="Title of your to do">
             <input type="button" id="add-title" value="+"></input>
