--- a/views/todo/alltodoview.hbs
+++ b/views/todo/alltodoview.hbs
@@ -19,11 +19,11 @@
             <a href="/todos/{{this.id}}"><img id="edit-image-todos" src="/images/edit.png", alt="Edit-todo"/></a>
             {{!-- <a href="/todos" id="delete-one-todo"><img id="trashbin-image-todos" src="/images/trash-bin.png", alt="Trash bin"/></a> --}}
           </section>
-        </div>
+      </div>
     {{/each}}
     </section>
 
-        <section>Outils</section>
+        <section></section>
 
   </section>
 
