--- a/views/todo/onetodoview.hbs
+++ b/views/todo/onetodoview.hbs
@@ -12,15 +12,19 @@
 
   {{!-- <h2 class="one-title">{{oneTodo.title}}</h2> --}}
 <p><input type="text" id="edit-todo-title" value="{{oneTodo.title}}" /></p>
-<a id="edit-button-todo-title" href="/todos/{{oneTodo.id}}">edit</a>
+<a id="edit-button-todo-title" href="/todos/{{oneTodo.id}}">🖋</a>
 
 <div class="content">
 {{#each oneTodo.content}}
 <article>
 {{!-- <li class="one-task-edit-page">{{this.task}}</li> --}}
-<p><input type="text" value="{{this.task}}" /></p>
-<a class="edit-button" href="/todos/{{../oneTodo.id}}/{{this.id}}">edit</a>
-<a class="delete-button-task" href="/todos/{{../oneTodo.id}}/{{this.id}}">delete</a>
+<p>
+  <a class="delete-button-task" href="/todos/{{../oneTodo.id}}/{{this.id}}">○</a>
+  <input type="text" value="{{this.task}}" />
+  <a class="edit-button" href="/todos/{{../oneTodo.id}}/{{this.id}}">🖋</a>
+</p>
+
+
 
 </article>
 
@@ -33,12 +37,12 @@
 <input type="button" id="add-task-edit-page" value="+"></input>
 
 
-<a href="/todos" id="delete-one-todo"><img id="trashbin-image-todos" src="/images/trash-bin.png", alt="Trash bin"/></a>
 
 </section>
 
-        <section id="outils-one-todo">Outils
+        <section data-id="{{oneTodo.id}}" id="outils-one-todo">Outils
 <a href="/todos" id="button-all-todo">ALL TO DOs</a>
+<a href="/todos" id="delete-one-todo"><img id="trashbin-image-todos" src="/images/trash-bin.png", alt="Trash bin"/></a>
 
         </section>
 
@@ -46,8 +50,10 @@
 
 <template id="task-template">
   <article>
-<p><input type="text" value="" /></p>
-<a class="edit-button" href="/todos/{{oneTodo.id}}/">edit</a>
+<p>○<input type="text" value="" />
+<a class="edit-button" href="/todos/{{oneTodo.id}}/">🖋</a>
+</p>
+{{!-- <a class="delete-button-task" href="/todos/{{../oneTodo.id}}/{{this.id}}">delete</a> --}}
 
 </article>
 </template>
