--- a/views/todo/createtodoview.hbs
+++ b/views/todo/createtodoview.hbs
@@ -10,14 +10,17 @@
             {{> selectionpartial}}
         </section>
 
-        <section><h2 class="transformation-line"></h2>
+        <section ="section-one-todo-create"><h2 class="transformation-line"></h2>
         <ul id="tasks"></ul>
             <input type="text" data-todo-id="" name="title" id="new-todo-input" placeholder="Title of your to do">
             <input type="button" id="add-title" value="+"></input>
         </section>
-        <section>
-            Outils
-            <a href="/todos" id="button-all-todo">ALL TO DOs</a>
+        <section id="outils-one-todo-create">
+            
+
+            <div class="class-button-all-todo-create">
+<a href="/todos" id="button-all-todo-create">All to do</a>
+</div>
         </section>
   </section>
 
