--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -5,9 +5,14 @@
 }
 
 /* unvisited link */
-a:link {
+/* a:link {
   color: black;
   transition: O.5s;
+} */
+
+a:link {
+  text-decoration: none;
+  color: black;
 }
 
 /* visited link */
