--- a/views/todo/onetodoview.hbs
+++ b/views/todo/onetodoview.hbs
@@ -11,8 +11,8 @@
 <section data-id="{{oneTodo.id}}" id="section-one-todo">
 
   {{!-- <h2 class="one-title">{{oneTodo.title}}</h2> --}}
-<p><input type="text" id="edit-todo-title" value="{{oneTodo.title}}" /></p>
-<a id="edit-button-todo-title" href="/todos/{{oneTodo.id}}">🖋</a>
+<p><input name="one-todo-title" type="text" id="edit-todo-title" value="{{oneTodo.title}}" /><a id="edit-button-todo-title" href="/todos/{{oneTodo.id}}">🖋</a></p>
+
 
 <div class="content">
 {{#each oneTodo.content}}
@@ -32,16 +32,18 @@
 
 </div>
 
-<ul id="tasks-edit-page"></ul>
-<input type="text" data-todo-id="{{oneTodo.id}}" name="task-edit-page" id="new-task-input-edit-page" placeholder="Add a task">
-<input type="button" id="add-task-edit-page" value="+"></input>
-
+<div class="add-task-div">
+<input type="text" data-todo-id="{{oneTodo.id}}" name="task-edit-page" id="new-task-input-edit-page" placeholder="Add a task here">
+<input name="plus-input" type="button" id="add-task-edit-page" value="+"></input>
+</div>
 
 
 </section>
 
-        <section data-id="{{oneTodo.id}}" id="outils-one-todo">Outils
-<a href="/todos" id="button-all-todo">ALL TO DOs</a>
+        <section data-id="{{oneTodo.id}}" id="outils-one-todo">
+<div class="class-button-all-todo">
+<a href="/todos" id="button-all-todo">All to do</a>
+</div>
 <a href="/todos" id="delete-one-todo"><img id="trashbin-image-todos" src="/images/trash-bin.png", alt="Trash bin"/></a>
 
         </section>
